--- a/src/Weather.css
+++ b/src/Weather.css
@@ -31,9 +31,8 @@
   list-style: none;
 }
 
-.Weather img {
-  height: 64px;
-  width: 64px;
+.Weather canvas {
+  margin-top: 5px;
   margin-right: 10px;
   display: inline-block;
 }
