--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,6 @@
 .Weather {
   font-family: arial, sans-serif;
-  border: 1px solid #dadde1;
+  border: 3px solid #dadde1;
   color: rgb(135, 135, 135);
   padding: 16px;
   margin: 30px auto;
@@ -16,6 +16,9 @@
 
 .Weather form {
   margin-bottom: 20px;
+}
+.form-control {
+  border-color: #360cb2;
 }
 
 .Weather ul {
@@ -40,16 +43,31 @@
 .Weather .temperature {
   font-weight: bold;
   color: rgb(33, 33, 33);
-  font-size: 50px;
+  font-size: 64px;
   line-height: 64px;
+  margin-left: 5px;
   font-weight: 400;
+  margin-left: 10px;
 }
-.Weather .units {
-  color: rgb(33, 33, 33);
+.Weather .unit {
+  color: #adabc9;
   font-size: 16px;
   font-weight: 400;
   position: relative;
   top: -34px;
   line-height: 1;
   margin-left: 5px;
+}
+.WeatherForecast {
+  margin-top: 30px;
+}
+
+.btn-branding {
+  background: #adabc9;
+}
+a {
+  color: #360cb2;
+}
+body {
+  background: #ecebf7;
 }
